k8s/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: springboot-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
