k8s/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kuber-demo-service-dr
spec:
  host: kuber-demo-service.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    connectionPool:
      tcp:
        maxConnections: 3
      http:
        http2MaxRequests: 5
        maxRequestsPerConnection: 1
    tls:
      mode: ISTIO_MUTUAL
